# Neural_Network_HSE

./: .gitignore
Neural_Network_HSE/: ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  ConvertMnistDataToTxt.cpp  Functions.cpp  Functions.h  Layer.h  LinAlg.cpp  LinAlg.h  LostFunction.cpp  LostFunction.h  MnistLoader.h  conv  convert  main.cpp
Neural_Network_HSE/Mnist/: img.txt  main.cpp  train-labels-idx1-ubyte.txt
