cmake_minimum_required(VERSION 3.13)
project(Neural_Network LANGUAGES CXX)

add_compile_options(
    -Werror
    -Wall
    -Wextra
    -Wpedantic
    -Wcast-align
    -Wcast-qual
    -Wconversion
    -Wctor-dtor-privacy
    -Wenum-compare
    -Wfloat-equal
    -Wnon-virtual-dtor
    -Wold-style-cast
    -Woverloaded-virtual
    -Wredundant-decls
    -Wsign-conversion
    -Wsign-promo
)

set(CMAKE_CXX_STANDARD 17)

set(SOURCE main.cpp)
# set(HEADERS)

add_executable(main ${SOURCE})